# omr_babel

./: LICENSE  README.md  foo.py  setup.cfg  setup.py
docs/: python_packaging.md
