[metadata]
name = mashcima
version = 0.0.1
author = Jiří Mayer
author_email = mayer@ufal.mff.cuni.cz
description = Annotation format convertor library for OMR
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Jirka-Mayer/Mashcima
project_urls =
    Bug Tracker = https://github.com/Jirka-Mayer/Mashcima/issues
classifiers =
    Programming Language :: Python :: 3
    Natural Language :: English
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
